xine-lib (1.1.1+cvs20060702-2) UNRELEASED; urgency=low

  * updated README.Debian

 -- Reinhard Tartler <siretart@tauware.de>  Mon,  3 Jul 2006 11:13:30 +0200

xine-lib (1.1.1+cvs20060702-1) experimental; urgency=low

  * new CVS snapshot, including fix for FTBFS on arm
  * compiling with -mcpu=ultrasparc to avoid FTBFS
  * updated cvs snapshot

 -- Reinhard Tartler <siretart@tauware.de>  Fri, 30 Jun 2006 22:35:06 +0200

xine-lib (1.1.1+cvs20060624-1) experimental; urgency=low

  * new upstream snapshot, featuring (from upstream ChangeLog)
    + Security fixes:
      - CVE-2005-4048: possible buffer overflow in libavcodec (crafted PNGs).
      - CVE-2006-2802: possible buffer overflow in the HTTP plugin.
      - possible buffer overflow via bad indexes in specially-crafted AVI files
    + Also look for Xv support in /usr/lib for X.org's new location
    + Support for Vorbis-style comments in FLAC files (Closes: #354188)
    + Add ATSC support to the DVB plugin (Closes: #287875)
    + Fix up health check to find libX11 and libXv shared objects even if
      devel packages aren't installed (where appropriate). (Ubuntu 47357)
    + Fix install problems in case configure was generated by autoconf >= 2.59c.
      (already included in older debian upload)
    + Add support for RealPlayer 10 codecs (from SUSE) (Closes: #274180)
  * add w3m to build-depends
  * New upstream fixes implicit pointer conversion. Thanks David Mosberger for
    testing (Closes: #360003)
  * cleanups in debian/rules
  * use external (debian) ffmpeg
  * run autohell on build time (read: on the buildds)

 -- Reinhard Tartler <siretart@tauware.de>  Sat, 24 Jun 2006 13:22:26 +0000

xine-lib (1.1.1-3) UNRELEASED; urgency=low

  * (re)introduce libxine1-dbg package. (Closes: #373135)

 -- Reinhard Tartler <siretart@tauware.de>  Wed, 14 Jun 2006 11:27:35 +0200

xine-lib (1.1.1-2) unstable; urgency=medium

  [ Reinhard Tartler ]

  * Use external libmad, acknowledging NMU (Closes: #336437)